tests/syntax_error/triple_equals.jou
from "stdlib/io.jou" import puts

def main() -> int:
    if 1 === 2:  # Error: there is no '===' operator
        puts("hey")
    return 0
